# binutils

./: .editorconfig  Cargo.toml  PKGBUILD.template  README.md  bump-version.sh  justfile
.github/workflows/: check.yml
src/: lib.rs
src/tools/: backlight.rs  microphone.rs  mod.rs  speakers.rs  touchpad.rs
