[package]
name = "binutils"
version = "0.0.0"
edition = "2021"
authors = ["mbme"]
publish = false

[lints.clippy]
all = "deny"

[dependencies]
anyhow = "1"

log = "0.4"
env_logger = "0.11"

clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

lazy_static = "1.4"
regex = "1.5"
